Partial: tdf#156855 update native and LibreOffice dark mode states

Updating the dark mode state of everything all at once does not
solve all failures to update colors when the light/dark mode
changes, but it eliminates enough failures that the UI is now
generally readble without restarting LibreOffice.

Also, update the application's color mode when the macOS light/dark
mode changes while LibreOffice is running.

Change-Id: Iffe3ca3789373135f06f7fbe22429cc59438d4f6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182484
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
Reviewed-by: Sahil <sahil.gautam.extern@allotropia.de>